--- a/.github/workflows/run-e2e-at-night.yml
+++ b/.github/workflows/run-e2e-at-night.yml
@@ -2,7 +2,7 @@ name: Run e2e at night
 
 on:
   workflow_dispatch:
-    branches: ["3.0"]
+    branches: [reopened, synchronize, labeled, opened]
   pull_request:
     types: [reopened, opened]
     branches: ["*"]
