--- a/.github/workflows/run-e2e-at-night.yml
+++ b/.github/workflows/run-e2e-at-night.yml
@@ -11,6 +11,8 @@ jobs:
   cypress-run-qa:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v1
       - name: Cypress run full spec
         uses: cypress-io/github-action@v2
         env:
