add manually trigger

--- a/.github/workflows/run-e2e-at-night.yml
+++ b/.github/workflows/run-e2e-at-night.yml
@@ -1,5 +1,7 @@
 name: Cypress nightly tests
 on:
+  workflow_dispatch:
+    branches: ["*"]
   pull_request:
     types: [reopened, synchronize, labeled, opened]
   schedule:
