--- a/.github/workflows/run-e2e-at-night.yml
+++ b/.github/workflows/run-e2e-at-night.yml
@@ -1,7 +1,7 @@
 name: Cypress nightly tests
 on:
-  schedule:
-  - cron: '*/10 * * * *'
+  workflow_dispatch:
+    branches: ["*"]
     
 jobs:
   nightly:
