--- a/package.json
+++ b/package.json
@@ -262,6 +262,7 @@
     "start": "npm run generate-fragment-types && webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
+    "cy:run:qa": "cypress run --env tags=all --config baseUrl=https://qa.staging.saleor.cloud/dashboard/  --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
     "cy:run:dashboard": "cypress run --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
     "cy:run:record": "npm run cy:run -- --record",
     "cy:open": "cypress open",
