--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saleor-dashboard",
-  "version": "3.0.0-b.30",
+  "version": "3.0.0-rc.1",
   "main": "src/index.tsx",
   "repository": {
     "type": "git",
