--- a/package.json
+++ b/package.json
@@ -93,10 +93,13 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.7.6",
     "@editorjs/embed": "^2.4.6",
+    "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.1.1",
     "@graphql-codegen/fragment-matcher": "^3.1.0",
-    "@graphql-codegen/typescript": "^2.1.1",
+    "@graphql-codegen/typescript": "^2.4.3",
     "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.10",
+    "@graphql-codegen/typescript-operations": "^2.2.4",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.5",
     "@pollyjs/adapter-node-http": "^5.0.0",
     "@pollyjs/core": "^5.0.0",
     "@pollyjs/persister-fs": "^5.0.0",
