Use generated hooks in attributes

--- a/package.json
+++ b/package.json
@@ -252,16 +252,15 @@
   },
   "scripts": {
     "build-storybook": "build-storybook -c src/storybook/ -o build/storybook",
-    "generate-fragment-types": "graphql-codegen",
-    "build-types": "npx apollo client:codegen --target=typescript types --globalTypesFile=src/types/globalTypes.ts && npm run generate-fragment-types",
-    "build": "npm run generate-fragment-types && webpack -p",
+    "build-types": "graphql-codegen",
+    "build": "npm run build-types && webpack -p",
     "check-strict-null-errors": "tsc --noEmit --strictNullChecks | node scripts/count-strict-null-check-errors.js",
     "check-types": "tsc --noEmit",
     "extract-json-messages": "rimraf build/locale && cross-env NODE_ENV=extract babel src 'src/**/*.{ts,tsx}' -o build/dashboard.bundle.js",
     "extract-messages": "npm run extract-json-messages && npm run transpile-messages",
     "heroku-postbuild": "npm run build",
     "serve:lhci": "NODE_ENV=production npm run server",
-    "start": "npm run generate-fragment-types && webpack-dev-server -d",
+    "start": "npm run build-types && webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
     "cy:run:report": "cypress run --env tags=all --reporter cypress-mochawesome-reporter --reporter-options reportDir='cypress/reports',overwrite=true,charts=true",
