add reporter, fix tests

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ cypress/videos
 webpack-bundle.json
 /templates/templated_email/compiled/*
 !/templates/templated_email/compiled/.gitkeep
+mochawesome.json
+mochawesome-report
+cypress/results
 
 # Exported results file
 django-queries-results.html
