--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "hotkeys-js": "^3.8.1",
     "is-url": "^1.2.4",
     "jss": "^9.8.7",
+    "junit-report-merger": "^3.0.5",
     "keycode": "^2.2.0",
     "lodash": "^4.17.20",
     "moment-timezone": "^0.5.32",
@@ -149,6 +150,7 @@
     "cross-env": "^6.0.3",
     "cypress": "^9.2.1",
     "cypress-file-upload": "^5.0.8",
+    "cypress-multi-reporters": "^1.5.0",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -171,6 +173,10 @@
     "jest-localstorage-mock": "^2.4.3",
     "jscodeshift": "^0.13.0",
     "lint-staged": "^10.5.1",
+    "mocha-junit-reporter": "^2.0.2",
+    "mochawesome": "^7.0.1",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.0.1",
     "mock-apollo-client": "^0.4.0",
     "prettier": "^1.19.1",
     "react-intl-translations-manager": "^5.0.3",
@@ -262,6 +268,9 @@
     "start": "npm run generate-fragment-types && webpack-dev-server -d",
     "storybook": "start-storybook -p 3000 -c src/storybook/",
     "cy:run": "cypress run",
+    "cy:run:report": "cypress run --reporter mochawesome --reporter-options reportDir='cypress/results',overwrite=false,html=false,json=true",
+    "cy:combine:reports": "npx mochawesome-merge 'cypress/results/*.json' > mochawesome.json",
+    "cy:run:merge": "npx marge mochawesome.json",
     "cy:run:dashboard": "cypress run --record --key 1fe833f5-fca4-4454-ac55-943815b91c6c",
     "cy:run:record": "npm run cy:run -- --record",
     "cy:open": "cypress open",
