--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.1.1",
     "@graphql-codegen/fragment-matcher": "^3.1.0",
+    "@graphql-codegen/import-types-preset": "^2.1.12",
     "@graphql-codegen/typescript": "^2.4.3",
     "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.10",
     "@graphql-codegen/typescript-operations": "^2.2.4",
