--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@graphql-codegen/cli": "^2.1.1",
     "@graphql-codegen/fragment-matcher": "^3.1.0",
     "@graphql-codegen/import-types-preset": "^2.1.12",
+    "@graphql-codegen/introspection": "^2.1.1",
     "@graphql-codegen/typescript": "^2.4.3",
     "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.10",
     "@graphql-codegen/typescript-operations": "^2.2.4",
@@ -259,6 +260,7 @@
     "check-types": "tsc --noEmit",
     "extract-json-messages": "rimraf build/locale && cross-env NODE_ENV=extract babel src 'src/**/*.{ts,tsx}' -o build/dashboard.bundle.js",
     "extract-messages": "npm run extract-json-messages && npm run transpile-messages",
+    "fetch-schema": "graphql-codegen --config ./fetch-schema.yml",
     "heroku-postbuild": "npm run build",
     "serve:lhci": "NODE_ENV=production npm run server",
     "start": "npm run build-types && webpack-dev-server -d",
