--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "cypress": "^9.2.1",
     "cypress-file-upload": "^5.0.8",
     "cypress-multi-reporters": "^1.5.0",
+    "cypress-timings": "^1.0.0",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
