--- a/.github/workflows/critical-tests.yml
+++ b/.github/workflows/critical-tests.yml
@@ -1,4 +1,4 @@
-name: E2E
+name: RUN_CRITICAL_TESTS
 
 # Only trigger, when the build workflow succeeded
 on:
@@ -8,7 +8,6 @@ on:
     branches: ["*"]
 jobs:
   cypress-run-critical:
-    if: ((github.event.label.name != 'run e2e') || !(contains(github.event.pull_request.labels.*.name, 'run e2e'))
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
