add run on pull request for testing

--- a/.github/workflows/critical-tests.yml
+++ b/.github/workflows/critical-tests.yml
@@ -2,6 +2,9 @@ name: RUN_CRITICAL_TESTS
 
 # Only trigger, when the build workflow succeeded
 on:
+  pull_request:
+    types: [reopened, synchronize, labeled, opened]
+    branches: ["*"]
   workflow_run:
     workflows: ["TEST-ENV-DEPLOYMENT"]
     types: [completed]
