--- a/.github/workflows/critical-tests.yml
+++ b/.github/workflows/critical-tests.yml
@@ -47,13 +47,6 @@ jobs:
             ${{ runner.os }}-qa-
             ${{ runner.os }}-
 
-      - name: Cache Cypress Binary
-        id: cache-cypress-binary
-        uses: actions/cache@v2
-        with:
-          path: cypress/cache
-          key: cypress-binary-${{ hashFiles('package-lock.json') }}
-
       - name: Install Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
@@ -63,14 +56,14 @@ jobs:
         env:
           API_URI: ${{ steps.api_uri.outputs.custom_api_uri }}
           APP_MOUNT_URI: ${{ secrets.APP_MOUNT_URI }}
-          CYPRESS_baseUrl: ${{ steps.api_uri.outputs.base_URL }}
+          CYPRESS_baseUrl: ${{ steps.base_URL.outputs.base_URL }}
           CYPRESS_USER_NAME: ${{ secrets.CYPRESS_USER_NAME }}
           CYPRESS_SECOND_USER_NAME: ${{ secrets.CYPRESS_SECOND_USER_NAME }}
           CYPRESS_USER_PASSWORD: ${{ secrets.CYPRESS_USER_PASSWORD }}
           CYPRESS_PERMISSIONS_USERS_PASSWORD: ${{ secrets.CYPRESS_PERMISSIONS_USERS_PASSWORD }}
         with:
           command: npm run cy:run:critical
-          wait-on: ${{ steps.api_uri.outputs.base_URL }}
+          wait-on: ${{ steps.base_URL.outputs.base_URL }}
       - uses: actions/upload-artifact@v1
         if: ${{ failure() }}
         with:
