--- a/.github/workflows/critical-tests.yml
+++ b/.github/workflows/critical-tests.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Get base_URL
         id: base_URL
         run: |
-          echo "::set-output name=base_URL::$(echo ${GITHUB_HEAD_REF}).dashboard.saleor.rocks"
+          echo "::set-output name=base_URL::https://$(echo ${GITHUB_HEAD_REF}).dashboard.saleor.rocks"
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
