--- a/.github/workflows/critical-tests.yml
+++ b/.github/workflows/critical-tests.yml
@@ -10,44 +10,18 @@ on:
     branches: ["*"]
   
 jobs:
-  cypress-install:
-    runs-on: ubuntu-latest
-    container: cypress/browsers:node14.16.0-chrome89-ff86
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-
-      - name: Install 📦
-        uses: cypress-io/github-action@v2
-        with:
-          runTests: false
-
-      - name: Save built folders 🆙
-        uses: actions/upload-artifact@v2
-        with:
-          name: install-and-build
-          path: |
-            ~/.cache/Cypress
-            node_modules
-            docs
-            public
-
   cypress-run-critical:
     runs-on: ubuntu-latest
     container: cypress/browsers:node14.16.0-chrome89-ff86
-    needs: cypress-install
     strategy:
       fail-fast: false
       matrix:
         # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+        containers: [1, 2, 3, 4]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Download built folders ⏬
-        uses: actions/download-artifact@v2
-        with:
-          name: install-and-build
+      
       - name: Get API_URI
         id: api_uri
         # Search for CYPRESS_API_URI in PR description and use default if not defined
@@ -62,6 +36,7 @@ jobs:
         id: base_URL
         run: |
           echo "::set-output name=base_URL::https://$(echo ${GITHUB_HEAD_REF}).dashboard.saleor.rocks"
+
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
@@ -78,7 +53,6 @@ jobs:
           CYPRESS_USER_PASSWORD: ${{ secrets.CYPRESS_USER_PASSWORD }}
           CYPRESS_PERMISSIONS_USERS_PASSWORD: ${{ secrets.CYPRESS_PERMISSIONS_USERS_PASSWORD }}
         with:
-          install: false
           parallel: true
           group: 'UI - Chrome'
           command: npm run cy:run:critical
