--- a/.github/workflows/critical-tests-parallel.yml
+++ b/.github/workflows/critical-tests-parallel.yml
@@ -58,7 +58,6 @@ jobs:
           command: npm run cy:run:critical
           wait-on: ${{ steps.base_URL.outputs.base_URL }}
       - uses: actions/upload-artifact@v1
-        if: ${{ failure() }}
         with:
-          name: cypress-reports
+          name: cypress-reports-${{ matrix.containers }}
           path: cypress/reports
