--- a/.github/workflows/critical-tests.yml
+++ b/.github/workflows/critical-tests.yml
@@ -66,5 +66,5 @@ jobs:
           wait-on: ${{ steps.base_URL.outputs.base_URL }}
       - uses: actions/upload-artifact@v1
         with:
-          name: cypress-reports
-          path: cypress/reports
+          name: cypress-videos
+          path: cypress/videos
