--- a/.github/workflows/critical-tests-parallel.yml
+++ b/.github/workflows/critical-tests-parallel.yml
@@ -60,5 +60,5 @@ jobs:
       - uses: actions/upload-artifact@v1
         if: ${{ failure() }}
         with:
-          name: cypress-reports-${{ matrix.containers }}    
-          path: cypress/reports
+          name: cypress-videos-${{ matrix.containers }}    
+          path: cypress/videos
