--- a/package.json
+++ b/package.json
@@ -261,6 +261,7 @@
     "extract-json-messages": "rimraf build/locale && cross-env NODE_ENV=extract babel src 'src/**/*.{ts,tsx}' -o build/dashboard.bundle.js",
     "extract-messages": "npm run extract-json-messages && npm run transpile-messages",
     "fetch-schema": "graphql-codegen --config ./fetch-schema.yml",
+    "build-schema": "node scripts/build-schema.js",
     "heroku-postbuild": "npm run build",
     "serve:lhci": "NODE_ENV=production npm run server",
     "start": "npm run build-types && webpack-dev-server -d",
