--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
+    "esbuild-loader": "^2.18.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-chai-friendly": "^0.6.0",
